high level data setup